@@ -5,6 +5,8 @@
     # The command "creme_populate" now returns a correct error code if an error happened.
       It's a backport from Creme 2.6
     # The 'populate' scripts could failed on menu configuration in some cases.
+    # There was issue when a FileRef is creating when a CremeModel is deleted:
+      the path could be too long to be stored by the FileRef, which caused an error.
 
 
 == Version 2.5.20 ==
